ComprehensiveApplicationTest/Q2/kubernetes/app/web-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: asiayo
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
